--- a/public/css/header.css
+++ b/public/css/header.css
@@ -64,7 +64,7 @@ nav a {
   font-family: "Kanit", sans-serif;
   text-align: center;
   transition: all 0.3s ease 0s;
-  color: rgba(0, 136, 169, 1);
+  color: rgb(0, 49, 87);
   padding: 2.2vh;
   margin: 2vh 0.5vh;
   border-radius: 25px;
@@ -76,7 +76,8 @@ nav div {
 }
 
 nav a:hover {
-  color: black;
+  color: rgb(0, 247, 255);
+  background-color: rgba(0, 129, 116, 0.556);
 }
 
 #active {
