--- a/views/delivery.html
+++ b/views/delivery.html
@@ -47,7 +47,8 @@
       <div class="cities">
         <h1>Find your city here</h1>
         <input type="text" name="" placeholder="Type here" id="filter_users" />
-        <ul id="city-list"></ul>
+        <ul id="city-list">
+        </ul>
       </div>
       <hr />
       <div class="search">
