--- a/public/css/aboutus.css
+++ b/public/css/aboutus.css
@@ -3,27 +3,33 @@
   height: auto;
   padding: 3% 7%;
 }
+
 .upper {
   padding: 4vh 10%;
   width: 100%;
   height: 70vh;
 }
+
 .upper img {
   float: right;
   height: 60vh;
 }
+
 .containerimg {
   margin-left: 140px;
   height: 60vh;
   width: 75%;
-  background-color: skyblue;
+  background-color: rgb(93, 209, 255);
   box-shadow: inset 5vh 0 33px -2px skyblue,
     inset 10vh 0 15px -4px rgb(78, 191, 236),
     inset 20vh 0 15px -4px rgb(4, 163, 226);
-  border: solid 6px rgba(255, 255, 255, 0.5);
+  border: solid 3px rgba(255, 255, 255, 0.5);
   display: flex;
   flex-direction: row;
+  border-radius: 20px;
+  box-shadow: 0 10px 20px rgb(247, 96, 255);
 }
+
 .upper h1 {
   font-size: 3.5em;
   text-align: center;
@@ -38,15 +44,18 @@
   display: flex;
   flex-direction: row-reverse;
 }
+
 .leftabout {
   flex: 25%;
   position: relative;
 }
+
 .leftabout h2 {
   text-align: center;
   font-size: 2em;
   margin: 1vh;
 }
+
 .leftabout .sub_left1 {
   position: absolute;
   bottom: 20px;
@@ -57,6 +66,7 @@
   flex-direction: row;
   flex: 75%;
 }
+
 .rightabout p {
   flex: 50%;
   line-height: 2em;
