--- a/views/homepage.html
+++ b/views/homepage.html
@@ -13,6 +13,10 @@
     <title>Home-ShweDuWun</title>
   </head>
   <body class="mainn">
+    <a href="#" id="messenge">
+      <i class="fa-brands fa-facebook-messenger"></i
+    ></a>
+
     <header>
       <img class="logo" src="imgs/sdwlogo.png" alt="logo" />
       <nav>
@@ -89,7 +93,6 @@
           </p>
         </div>
       </div>
-      <!--TODO deli-->
     </section>
 
     <div class="footerclass">
@@ -142,5 +145,36 @@
       </footer>
     </div>
     <script src="js/navigation.js"></script>
+    <!-- Messenger Chat plugin Code -->
+    <div id="fb-root"></div>
+
+    <!-- Your Chat plugin code -->
+    <div id="fb-customer-chat" class="fb-customerchat"></div>
+
+    <script>
+      var chatbox = document.getElementById("fb-customer-chat");
+      chatbox.setAttribute("page_id", "100813059743677");
+      chatbox.setAttribute("attribution", "biz_inbox");
+    </script>
+
+    <!-- Your SDK code -->
+    <script>
+      window.fbAsyncInit = function () {
+        FB.init({
+          xfbml: true,
+          version: "v17.0",
+        });
+      };
+
+      (function (d, s, id) {
+        var js,
+          fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
+        fjs.parentNode.insertBefore(js, fjs);
+      })(document, "script", "facebook-jssdk");
+    </script>
   </body>
 </html>
