--- a/views/items.ejs
+++ b/views/items.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/header.css" type="text/css" />
     <link rel="stylesheet" href="/css/items.css" type="text/css" />
+    <link rel="stylesheet" href="/css/mobile_view/item_mobile.css" />
     <script
       src="https://kit.fontawesome.com/ef09da54b9.js"
       crossorigin="anonymous"
