--- a/views/store.html
+++ b/views/store.html
@@ -32,11 +32,13 @@
     <script src="js/navigation.js"></script>
     <section>
       <div class="categories">
-        <div class="sort">
-          <h1>Sort by <i class="fa-solid fa-arrow-down-wide-short"></i></h1>
-          <p>Let's See what is new?</p>
-        </div>
-        <div class="subcate">
+        <button id="sort">
+          <div class="sort">
+            <h1>Sort by <i class="fa-solid fa-arrow-down-wide-short"></i></h1>
+            <p>Let's See what is new?</p>
+          </div>
+        </button>
+        <div class="hidden" id="subcate">
           <h2>Filter</h2>
           <div class="buttons">
             <button class="categorybtn" data-category="all">All</button>
