--- a/public/css/mobile_view/store_mobile.css
+++ b/public/css/mobile_view/store_mobile.css
@@ -15,3 +15,41 @@
     flex-basis: 100%; /* Show 1 item per row on smallest screens */
   }
 }
+
+@media (max-width: 851px) {
+  section {
+    flex-direction: column;
+  }
+  .categories {
+    height: 5vh;
+    padding: 0;
+    background-color: rgba(255, 255, 255, 0);
+    position: relative;
+    > #sort {
+      height: 80%;
+      > .sort {
+        > h1 {
+          font-size: 2em;
+        }
+      }
+    }
+    > #subcate {
+      padding: 2vh;
+      height: auto;
+      position: relative; /*for Opera z-index */
+      z-index: 2;
+      > h2 {
+        font-size: 1.5em;
+      }
+      > .buttons {
+        > button {
+          height: 4vh;
+          font-size: 1em;
+        }
+      }
+    }
+  }
+  .products4 {
+    margin-top: -2vh;
+  }
+}
