--- a/public/css/store.css
+++ b/public/css/store.css
@@ -2,18 +2,20 @@ section {
   width: 100%;
   height: 95vh;
   padding-bottom: 60px;
+  display: flex;
+  flex-direction: row;
 }
 
 .products4 {
+  flex: 73%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   padding: 5%;
-  width: 73%;
   float: right;
   height: 100%;
   overflow-y: scroll;
-  margin-top: 5vh;
+  margin-top: 3vh;
 }
 .products4::-webkit-scrollbar {
   display: none;
@@ -64,21 +66,28 @@ section {
 }
 
 .categories {
-  width: 27%;
-  height: 80vh;
+  flex: 27%;
+  height: 75vh;
   background-color: white;
   float: left;
   margin-top: 10vh;
 }
 
-.sort {
+#sort {
   height: 30%;
+  width: 100%;
+  border: 0;
+  border-bottom: 5px solid black;
+  text-align: left;
+}
+
+.sort {
+  height: 100%;
   width: 100%;
   padding: 5vh;
   display: flex;
   justify-content: center;
   flex-direction: column;
-  border-bottom: 5px solid black;
 
   > h1 {
     font-size: 3em;
@@ -94,7 +103,7 @@ section {
   }
 }
 
-.subcate {
+#subcate {
   height: 70%;
   width: 100%;
   padding: 5vh;
