Revert "Update homepage.html"
This reverts commit b71459617aa9a3cbf15f0186b5b88a0327df4772.

--- a/views/homepage.html
+++ b/views/homepage.html
@@ -11,12 +11,6 @@
       crossorigin="anonymous"
     ></script>
     <title>Home-ShweDuWun</title>
-    <script
-      src="https://static.elfsight.com/platform/platform.js"
-      data-use-service-core
-      defer
-    ></script>
-    <div class="elfsight-app-d8b228a5-5799-4ac6-91c1-7e6ca2cc877c"></div>
   </head>
   <body class="mainn">
     <a href="#" id="messenger">
@@ -101,11 +95,8 @@
       </div>
     </section>
     <!-- This site is converting visitors into subscribers and customers with respond.io - https://respond.io -->
-    <!--<script
-      src="https://app.respond.io/facebook/chat/plugin/163164/100813059743677"
-      async
-    ></script>-->
-    <!-- https://respond.io/ -->
+<script src="https://app.respond.io/facebook/chat/plugin/163164/100813059743677" async></script>
+<!-- https://respond.io/ -->
     <div class="footerclass">
       <footer>
         <div class="footer1">
