--- a/views/delivery.html
+++ b/views/delivery.html
@@ -52,7 +52,7 @@
       <h1>Choose your region</h1>
 
       <button class="btn">
-        Yangon <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        ရန်ကုန်တိုင်း <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
       </button>
       <div class="content">
         <table>
@@ -131,7 +131,7 @@
         </table>
       </div>
       <button class="btn">
-        Bago <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        ပဲခူးတိုင်း <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
       </button>
       <div class="content">
         <table>
@@ -190,7 +190,7 @@
         </table>
       </div>
       <button class="btn">
-        Mandalay <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        မန္တလေးတိုင်း <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
       </button>
       <div class="content">
         <table>
@@ -242,7 +242,7 @@
       </div>
 
       <button class="btn">
-        Ayeyawady <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        ဧရာဝတီတိုင်း <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
       </button>
       <div class="content">
         <table>
@@ -286,67 +286,79 @@
       </div>
 
       <button class="btn">
-        Kachin <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        ကချင်ပြည်နယ် <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
       </button>
       <div class="content">
         <table>
           <tr>
-            <td>o</td>
-            <td>o</td>
+            <td>မြစ်ကြီးနား </td>
+            <td>မိုးကောင်း </td>
           </tr>
           <tr>
-            <td>o</td>
-            <td>o</td>
+            <td>ဗန်းမော် </td>
+            <td>ရွှေကူ၊ ဟိုပင် </td>
           </tr>
           <tr>
-            <td>o</td>
-            <td>o</td>
+            <td>နမ္မတီး</td>
+            <td>မိုးညှင်း </td>
+          </tr>
+          <tr>
+            <td>ဝိုင်းမော် </td>
+            <td>လွယ်ဂျယ်</td>
           </tr>
         </table>
       </div>
 
       <button class="btn">
-        Yakhine <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        ရခိုင်ပြည်နယ် <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
       </button>
       <div class="content">
         <table>
           <tr>
-            <td>o</td>
-            <td>o</td>
+            <td>စစ်တွေ၊ သံတွဲ </td>
+            <td>ကျောက်ဖြူ </td>
           </tr>
           <tr>
-            <td>o</td>
-            <td>o</td>
+            <td>ပုဏ္ဏားကျွန်း </td>
+            <td>မင်းပြား</td>
           </tr>
           <tr>
-            <td>o</td>
-            <td>o</td>
+            <td>မြောက်ဦး </td>
+            <td>တောင်ကုတ် </td>
+          </tr>
+          <tr>
+            <td>ငပလီ၊ဂွ </td>
+            <td>ကျောက်တော် </td>
+          </tr>
+          <tr>
+            <td>ဘူးသီးတောင် </td>
+            <td>မောင်းတော</td>
+          </tr>
+          <tr>
+            <td>ရမ်းဗြဲ </td>
+            <td>ပေါက်တော</td>
           </tr>
         </table>
       </div>
 
       <button class="btn">
-        Kayah <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        နေပြည်တော် <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
       </button>
       <div class="content">
         <table>
           <tr>
-            <td>o</td>
-            <td>o</td>
+            <td>နေပြည်တော် </td>
+            <td>ပျဉ်းမနား၊ လယ်ဝေး </td>
           </tr>
           <tr>
-            <td>o</td>
-            <td>o</td>
-          </tr>
-          <tr>
-            <td>o</td>
-            <td>o</td>
+            <td>တပ်ကုန်း </td>
+            <td>ပြန်ကပြေး</td>
           </tr>
         </table>
       </div>
 
       <button class="btn">
-        Kayin <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        ကရင်ပြည်နယ် <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
       </button>
       <div class="content">
         <table>
@@ -356,7 +368,7 @@
           </tr>
       </div>
       <button class="btn">
-        Chin <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        ချင်းပြည်နယ် <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
       </button>
       <div class="content">
         <table>
@@ -368,7 +380,7 @@
       </div>
 
       <button class="btn">
-        Shan <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        ရှမ်းပြည်နယ် <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
       </button>
       <div class="content">
         <table>
@@ -408,27 +420,23 @@
       </div>
 
       <button class="btn">
-        Tanintharyi <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        တနင်္သာရီတိုင်း <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
       </button>
       <div class="content">
         <table>
           <tr>
-            <td>o</td>
-            <td>o</td>
+            <td>မြိတ်</td>
+            <td>ကော့သောင်း </td>
           </tr>
           <tr>
-            <td>o</td>
-            <td>o</td>
-          </tr>
-          <tr>
-            <td>o</td>
-            <td>o</td>
+            <td>ထားဝယ်၊ရေဖြူ </td>
+            <td>မောင်းမကန်</td>
           </tr>
         </table>
       </div>
 
       <button class="btn">
-        Magway <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        မကွေးတိုင်း <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
       </button>
       <div class="content">
         <table>
@@ -464,7 +472,7 @@
       </div>
 
       <button class="btn">
-        Mon <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        မွန်ပြည်နယ် <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
       </button>
       <div class="content">
         <table>
@@ -496,7 +504,7 @@
       </div>
 
       <button class="btn">
-        Sagaing <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        စစ်ကိုင်းတိုင်: <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
       </button>
       <div class="content">
         <table>
