--- a/views/homepage.html
+++ b/views/homepage.html
@@ -13,6 +13,37 @@
     <title>Home-ShweDuWun</title>
   </head>
   <body class="mainn">
+    <!-- Messenger Chat plugin Code -->
+    <div id="fb-root"></div>
+
+    <!-- Your Chat plugin code -->
+    <div id="fb-customer-chat" class="fb-customerchat"></div>
+
+    <script>
+      var chatbox = document.getElementById("fb-customer-chat");
+      chatbox.setAttribute("page_id", "100813059743677");
+      chatbox.setAttribute("attribution", "biz_inbox");
+    </script>
+
+    <!-- Your SDK code -->
+    <script>
+      window.fbAsyncInit = function () {
+        FB.init({
+          xfbml: true,
+          version: "v17.0",
+        });
+      };
+
+      (function (d, s, id) {
+        var js,
+          fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
+        fjs.parentNode.insertBefore(js, fjs);
+      })(document, "script", "facebook-jssdk");
+    </script>
     <a href="#" id="messenger">
       <i class="fa-brands fa-facebook-messengr"></i
     ></a>
@@ -95,8 +126,11 @@
       </div>
     </section>
     <!-- This site is converting visitors into subscribers and customers with respond.io - https://respond.io -->
-<script src="https://app.respond.io/facebook/chat/plugin/163164/100813059743677" async></script>
-<!-- https://respond.io/ -->
+    <!--<script
+      src="https://app.respond.io/facebook/chat/plugin/163164/100813059743677"
+      async
+    ></script>-->
+    <!-- https://respond.io/ -->
     <div class="footerclass">
       <footer>
         <div class="footer1">
