--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -4,6 +4,9 @@
   margin: 3% 10%;
   background-color: rgba(3, 145, 247, 0.74);
   background-image: url("../imgs/mail_send.png");
+  background-position: right;
+  background-repeat: no-repeat;
+  background-size: 70%;
   border: 3px solid aqua;
   border-radius: 25px;
   overflow: hidden;
@@ -32,7 +35,7 @@
   position: absolute;
   height: 24%;
   width: 100%;
-  margin: 3vh 0 0 3vh;
+  bottom: 0;
   background-color: rgba(83, 178, 247, 0.74);
 }
 .sub_left h2 {
@@ -84,9 +87,14 @@
 .right form input,
 textarea,
 button {
+  opacity: 0.75;
   padding: 1.5vh 1vh;
   font-size: 1.2em;
   border: 3px solid black;
+}
+.right form input:focus {
+  opacity: 1;
+  border: 5px solid rgb(0, 183, 255);
 }
 form div {
   display: flex;
