updated with view port

--- a/views/items.ejs
+++ b/views/items.ejs
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     ></script>
     <title>Website4MyMomsBusiness</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body class="mainn">
     <!-- Messenger Chat plugin Code -->
