--- a/views/contactus.html
+++ b/views/contactus.html
@@ -13,6 +13,7 @@
       crossorigin="anonymous"
     ></script>
     <title>Contact Us</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body class="mainn">
     <!-- Messenger Chat plugin Code -->
