--- a/views/delivery.html
+++ b/views/delivery.html
@@ -10,6 +10,7 @@
       crossorigin="anonymous"
     ></script>
     <title>Delivery</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <body class="mainn">
