--- a/views/error.ejs
+++ b/views/error.ejs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Error</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <h1>Error</h1>
