--- a/views/store.html
+++ b/views/store.html
@@ -11,7 +11,15 @@
       crossorigin="anonymous"
     ></script>
     <title>Store</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css"
+      rel="stylesheet"
+    />
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+
+    <!-- Javascript -->
+    <script src="js/main.js"></script>
   </head>
 
   <body class="mainn">
@@ -475,6 +483,12 @@
       </div>
     </section>
     <script src="js/store.js"></script>
+    <div id="dialog-4" title="In Myanmar">
+      Please Turn on VPN for Messenger support.
+      <br />
+      <br />
+      <img src="imgs/messenger.png" alt="" />
+    </div>
     <footer>
       <div class="footer1">
         <h1>ShweDuWun</h1>
